--- a/css/style.css
+++ b/css/style.css
@@ -72,9 +72,12 @@ p {
 
 .bg-primary {
 	background: #f7c08a;
-	color: #fff;
+	color: #333;
 }
 
+.clr {
+	clear: both;
+}
 
 
 /* Navbar */
@@ -159,4 +162,24 @@ p {
 
 #home-info .info-content p {
 	padding-bottom: 30px;
+}
+
+/* Features */
+.box {
+	float: left;
+	width: 33.3%;
+	padding: 50px;
+	text-align: center;
+}
+
+.box i {
+	margin-bottom: 10px;
+}
+
+/* Footer */
+#main-footer {
+	text-align: center;
+	background: #444;
+	color: #fff;
+	padding: 20px;
 }
